welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: not found: value prendbiscuit
def av() {prendbiscuit; avance(5); poseBiscuit}
          ^